# kata

./: .gitignore  LICENSE  README.md  pyproject.toml
kata/array/problems/: compression.py  consecutive.py  counting.py  duplicate.py  find_duplicate.py  find_unique.py  group_anagrams.py  increasing_triplet.py  intersection.py  is_permutation.py  is_unique.py  longest_consecutive.py  maximum_profit.py  nonduplicate.py  one_away.py  palindrome_permutation.py  reverse.py  rotate.py  rotate_matrix.py  search_rotated.py  sort_temperatures.py  sorted_merge.py  stock.py  string_rotation.py  sum_swap.py  sumswap.py  trend.py  two_crystal.py  urlify.py  zero_matrix.py
kata/arrays/: binary.py  bubble.py  linear.py
kata/arrays/problems/: crystal.py
kata/bit/problems/: binary_to_string.py  conversion.py  draw_line.py  flip_bit.py  insertion.py  next_number.py  pairwise_swap.py
kata/bstree/algorithms/: add.py  contains.py  remove.py
kata/bstree/problems/: all_arrays.py  minimal_tree.py  random.py  successor.py
kata/bstrees/algorithms/: add.py  contains.py  delete.py  exists.py  insert.py  remove.py
kata/btree/problems/: first_common_ancestor.py  is_balanced.py  is_bstree.py  (+3 more)
kata/heaps/: minimum.py
kata/linked/: queue.py  snode.py  stack.py
kata/trees/: bfs.py  bnode.py  bst.py  dfs.py
tests/arrays/: test_binary.py  test_bubble.py  test_crystal.py  test_linear.py  test_quick.py  test_selection.py
tests/heaps/: test_minimum.py
tests/linked/: test_queue.py  test_snode.py  test_stack.py
tests/trees/: test_bfs.py  test_bnode.py  test_bst.py  test_dfs.py
(+198 files in other folders)
